@@ -39,6 +39,11 @@ my $prereqs  = {
     'namespace::clean' => '0.25',
     'perl' => '5.010001'
   },
+  'test_requires' => {
+    'File::Spec' => '0',
+    'Module::Metadata' => '0',
+    'Sys::Hostname' => '0'
+  },
 };
 my $testing  = sub { $ENV{AUTOMATED_TESTING}
                   || $ENV{PERL_CPAN_REPORTER_CONFIG}
