@@ -21,7 +21,8 @@ lib/File/DataClass/Storage.pm
 lib/File/DataClass/Storage/Any.pm
 lib/File/DataClass/Storage/JSON.pm
 lib/File/DataClass/Types.pm
-t/01always_pass.t
+t/00report-metadata.dd
+t/00report-metadata.t
 t/02pod.t
 t/03podcoverage.t
 t/05kwalitee.t
