@@ -27,6 +27,16 @@ on 'build' => sub {
   requires "version" => "0.88";
 };
 
+on 'test' => sub {
+  requires "File::Spec" => "0";
+  requires "Module::Metadata" => "0";
+  requires "Sys::Hostname" => "0";
+};
+
+on 'test' => sub {
+  recommends "CPAN::Meta" => "2.120900";
+};
+
 on 'configure' => sub {
   requires "Module::Build" => "0.4004";
   requires "version" => "0.88";
