@@ -83,6 +83,7 @@ exclude_filename  = cpanfile
 [MetaYAML]
 [ManifestInRoot]
 [ManifestSkip]
+[Test::ReportMetadata]
 
 ; Local Variables:
 ; mode: conf-windows
