@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+          - Replaced 01always_pass.t with 00report_metadata.t
+
 0.63.1    2015-06-21 22:41:24
           - Skip tests if Test::Deep 0.116 installed
           - Added F:DC:IO:clone
